force-app/main/default/objects/Commission__c.object
<CustomObject>
    <description>Populated by nightly batch from the Organizer Payment records</description>
    <fields>
        <fullName>AdjustmentDescription__c</fullName>
        <label>Adjustment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Percent__c</fullName>
        <label>Commission Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commissionable_Amount__c</fullName>
        <label>Commissionable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must be a Contractor</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contractor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commissions (Contractor)</relationshipLabel>
        <relationshipName>CommissionsContractor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FY_Month__c</fullName>
        <formula>TEXT(MONTH(Payment_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_Year__c</fullName>
        <formula>TEXT(YEAR(Payment_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceID__c</fullName>
        <label>Invoice ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoiceTotalAmount__c</fullName>
        <label>Invoice Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must be an Operator</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Operator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_ID__c</fullName>
        <label>Payment ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuotaAttributablePercent__c</fullName>
        <label>Quota Attributable Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quota_Attributable_Amount__c</fullName>
        <label>Quota Attributable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payment_Amount__c</fullName>
        <label>Total Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Commission</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Commission Nbr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>